--- a/Bakalauras/Bakalauras/Pages/Testai/MyTestsList.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Testai/MyTestsList.cshtml
@@ -47,9 +47,9 @@
                                     <td scope="row">@Html.DisplayFor(f => item.From)</td>
                                     <td scope="row">@Html.DisplayFor(f => item.To)</td>
                                     <td scope="row">@Html.DisplayFor(f => item.TestCode)</td>
-                                    <td><a class="btn btn-info btn-lg te" style="margin-bottom: 15px;" asp-page="/Mokytis/SolveTask" asp-route-ID="@item.Id">Testo rezultatai</a></td>
-                                    <td><a class="btn btn-success btn-lg te" style="margin-bottom: 5px;" asp-page="/Mokytis/SolveTask" asp-route-ID="@item.Id">Redaguoti</a></td>
-                                    <td><a class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-page="/Mokytis/SolveTask" asp-route-ID="@item.Id">Pašalinti </a></td>
+                                    <td><a class="btn btn-info btn-lg te" style="margin-bottom: 15px;" asp-page="/Testai/TestStats" asp-route-ID="@item.Id">Testo rezultatai</a></td>
+                                    <td><a class="btn btn-success btn-lg te" style="margin-bottom: 5px;" asp-page="" asp-route-ID="@item.Id">Redaguoti</a></td>
+                                    <td><a class="btn btn-danger btn-lg te" style="margin-bottom: 15px;" asp-page="" asp-route-ID="@item.Id">Pašalinti </a></td>
                                 </tr>
                             }
                         </tbody>
