--- a/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
@@ -57,25 +57,22 @@
                         <label for="exampleFormControlTextarea1">Uždavinio rašyklė</label>
                         <textarea class="form-control" id="TaskCreate" rows="3">\( \)</textarea>
 
-                        <div class="row" style="margin-top: 15px;">
-                            <button type="button" id="eqStart" style="margin-left: 20px; margin-right: 10px;">Iterpt</button>
+                        <button type="button" id="eqStart" style="margin-left: 20px; margin-right: 10px;">Iterpt</button>
 
-                            <button type="button" id="frac" style="margin-left: 20px; margin-right: 10px;">
-                                <img src="/images/stackedFraction.png" style="width:2em; height:2em;" alt="Button Image">
-                            </button>
+                        <button type="button" id="frac" style="margin-left: 20px; margin-right: 10px;">
+                            <img src="/images/stackedFraction.png" style="width:2em; height:2em;" alt="Button Image">
+                        </button>
 
-                            <button type="button" id="sqrt" style="margin-left: 20px; margin-right: 10px;">
-                                <img src="/images/squareRoot.png" alt="Button Image">
-                            </button>
-                        </div>
-                        <div class="row" style="margin-top: 15px;">
-                            <button type="button" id="saveEq" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip uždavinį</button>
-                            <button type="button" id="saveAnswer1" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 1</button>
-                            <button type="button" id="saveAnswer2" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 2</button>
-                            <button type="button" id="saveAnswer3" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 3</button>
-                            <button type="button" id="saveAnswer4" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 4</button>
-                            <button type="button" id="saveExplain" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip paaiškinimą</button>
-                        </div>
+                        <button type="button" id="sqrt" style="margin-left: 20px; margin-right: 10px;">
+                            <img src="/images/squareRoot.png" alt="Button Image">
+                        </button>
+
+                        <button type="button" id="saveEq" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip uždavinį</button>
+                        <button type="button" id="saveAnswer1" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 1</button>
+                        <button type="button" id="saveAnswer2" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 2</button>
+                        <button type="button" id="saveAnswer3" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 3</button>
+                        <button type="button" id="saveAnswer4" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 4</button>
+                        @*<button type="button" id="saveExplain" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip paaiškinimą</button>*@
                     </div>
                 </div>
 
@@ -111,12 +108,12 @@
                     </div>
                 </div>
 
-                <div class="card" style="margin-bottom: 20px;">
+                @*<div class="card" style="margin-bottom: 20px;">
                     <div class="form-group">
                         <label for="Explaining">Atsakius į klausimą neteisingai būtu rodomas šis paaiškinimas:</label>
                         <div id="displayExplain" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displayExplain"></div>
                     </div>
-                </div>
+                </div>*@
 
                 <div class="card" style="margin-bottom: 20px;">
                     <h3>Papildoma informacija</h3>
