--- a/Bakalauras/Bakalauras/Pages/General/HelpPartial.cshtml
+++ b/Bakalauras/Bakalauras/Pages/General/HelpPartial.cshtml
@@ -1,4 +1,55 @@
-﻿<div class="col-lg-13 mx-auto" style="margin-top: 15px;">
+﻿<style>
+    .card {
+        margin-bottom: 0px;
+    }
+
+    .collapsible-link::before {
+        content: '';
+        width: 14px;
+        height: 2px;
+        background: #333;
+        position: absolute;
+        top: calc(50% - 1px);
+        right: 1rem;
+        display: block;
+        transition: all 0.3s;
+    }
+
+    .collapsible-link::after {
+        content: '';
+        width: 2px;
+        height: 14px;
+        background: #333;
+        position: absolute;
+        top: calc(50% - 7px);
+        right: calc(1rem + 6px);
+        display: block;
+        transition: all 0.3s;
+    }
+
+    .collapsible-link[aria-expanded='true']::after {
+        transform: rotate(90deg) translateX(-1px);
+    }
+
+    .collapsible-link[aria-expanded='true']::before {
+        transform: rotate(180deg);
+    }
+
+    .block {
+        display: block;
+        width: 100%;
+        border: solid;
+        border-color: white;
+        border-width: 1px;
+        background-color: #3e363f;
+        padding: 14px 28px;
+        font-size: 16px;
+        cursor: pointer;
+        text-align: left;
+    }
+</style>
+
+<div class="col-lg-13 mx-auto" style="margin-top: 15px;">
     <div class="card">
         <div class="container" style="margin-top: 15px;">
             <h2><i class="bi bi-info-circle"></i> Pagalba!</h2>
@@ -8,20 +59,96 @@
             <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
         </div>
         <hr />
-        <div class="container">
-            <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-        </div>
-        <hr />
-        <div class="container">
-            <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-        </div>
-        <hr />
-        <div class="container">
-            <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
-        </div>
-        <hr />
-        <div class="container">
-            <a href="https://www.nsa.smm.lt/wp-content/uploads/2021/02/8136_2019-Mat_VBE_PRIEDAS.pdf" target="_blank"><h5><i class="bi bi-book"></i> Prie egzamino užduoties pateikiamas matematinių formulių rinkinys</h5></a>
+        <div id="accordionExample" class="accordion shadow">
+            <!-- Accordion item 3 -->
+            <div class="card">
+                <div id="headingThree" class="card-header bg-white shadow-sm border-0">
+                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Lygtys, nelygybės ir jų sistemos</a></h6>
+                </div>
+                <div id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample" class="collapse">
+                    <div id="box" class="jxgbox" style="width: 500px; height: 500px;"></div>
+                </div>
+            </div>
+
+            <!-- Accordion item 4 -->
+            <div class="card">
+                <div id="headingFour" class="card-header bg-white shadow-sm border-0">
+                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Trigonometrija</a></h6>
+                </div>
+                <div id="collapseFour" aria-labelledby="headingFour" data-parent="#accordionExample" class="collapse">
+                    <div id="box1" class="jxgbox" style="width: 500px; height: 500px;"></div>
+                </div>
+            </div>
+
+            <!-- Accordion item 5 -->
+            <div class="card">
+                <div id="headingFive" class="card-header bg-white shadow-sm border-0">
+                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Diferencialinis skaičiavimas</a></h6>
+                </div>
+                <div id="collapseFive" aria-labelledby="headingFive" data-parent="#accordionExample" class="collapse">
+                    
+                </div>
+            </div>
+
+            <!-- Accordion item 6 -->
+            <div class="card">
+                <div id="headingSix" class="card-header bg-white shadow-sm border-0">
+                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Kombinatorika ir tikimybių teorija</a></h6>
+                </div>
+                <div id="collapseSix" aria-labelledby="headingSix" data-parent="#accordionExample" class="collapse">
+                    <
+                </div>
+            </div>
+
+            <!-- Accordion item 7 -->
+            <div class="card">
+                <div id="headingSeven" class="card-header bg-white shadow-sm border-0">
+                    <h6 class="mb-0 font-weight-bold"><a href="#" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven" class="d-block position-relative collapsed text-dark text-uppercase collapsible-link py-2">Atsitiktinis dydis. Statistika</a></h6>
+                </div>
+                <div id="collapseSeven" aria-labelledby="headingSeven" data-parent="#accordionExample" class="collapse">
+                    
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    // Initialize the board
+    var board = JXG.JSXGraph.initBoard('box', { boundingbox: [-10, 10, 10, -10], axis: true });
+
+    // Create the sliders
+    var a = board.create('slider', [[-1, -8], [-8, -8], [10, 1, -10]], { snapWidth: 1 });
+    var b = board.create('slider', [[-1, -7], [-8, -7], [10, 0, -10]], { snapWidth: 1 });
+    var c = board.create('slider', [[-1, -6], [-8, -6], [10, 0, -10]], { snapWidth: 1 });
+
+    // Create the quadratic function
+    var f = function (x) { return a.Value() * x * x + b.Value() * x + c.Value(); };
+
+    // Create the curve
+    var curve = board.create('functiongraph', [f, -10, 10], { strokecolor: 'blue', strokewidth: 2 });
+
+    // Create the labels for the sliders
+    var labela = board.create('text', [0, -8, function () { return 'a = ' + a.Value().toFixed(2); }]);
+    var labelb = board.create('text', [0, -7, function () { return 'b = ' + b.Value().toFixed(2); }]);
+    var labelc = board.create('text', [0, -6, function () { return 'c = ' + c.Value().toFixed(2); }]);
+
+
+
+
+    // Initialize the board
+    var board = JXG.JSXGraph.initBoard('box1', { boundingbox: [-10, 10, 10, -10], axis: true });
+
+    // Create the slider for the frequency
+    var freq = board.create('slider', [[-8, 8], [-8, 7], [1, 1, 10]], { snapWidth: 1 });
+
+    // Create the function
+    var f = function (x) { return Math.sin(freq.Value() * x); };
+
+    // Create the curve
+    var curve = board.create('functiongraph', [f, -10, 10], { strokecolor: 'blue', strokewidth: 2 });
+
+    // Create the label for the frequency slider
+    var labelfreq = board.create('text', [-7, 8, function () { return 'Frequency: ' + freq.Value().toFixed(0); }]);
+</script>
