code clean up added user and stuff

--- a/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -47,24 +50,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Temos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Uzdaviniai/MyTaskList">Mano uždaviniai</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Testai/MyTestsList">Mano testai</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Pasiekimai</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Administravimas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Testai/TestEnterCode">Spresti testą</a>
-                        </li>
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/Index">Temos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/Uzdaviniai/MyTaskList">Mano uždaviniai</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/Testai/MyTestsList">Mano testai</a>
+                            </li>
+                            @*<li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Pasiekimai</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Administravimas</a>
+                            </li>*@
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/Testai/TestEnterCode">Spresti testą</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
