pradetas testavimas ir programos baigiamasis funkcionalumas

--- a/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Shared/_Layout.cshtml
@@ -61,16 +61,19 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Testai/MyTestsList">Mano testai</a>
                             </li>
-                            @*<li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Pasiekimai</a>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-page="/Testai/MyCompletedTestList">Mano rezultatai</a>
                             </li>
+                            @*<li class="nav-item">
+                <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Pasiekimai</a>
+            </li>*@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/CreateTask">Administravimas</a>
-                            </li>*@
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Testai/TestEnterCode">Spresti testą</a>
                             </li>
-                        }
+                }
                     </ul>
                 </div>
             </div>
