--- a/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bakalauras/Bakalauras/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,16 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Vardas</label>
+                <input asp-for="Input.Name" class="form-control" />
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Pavardė</label>
+                <input asp-for="Input.Surname" class="form-control" />
+                <span asp-validation-for="Input.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label>Slaptazodis</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -30,7 +40,6 @@
             <button type="submit" class="btn btn-primary">Registruotis</button>
         </form>
     </div>
-   
 </div>
 
 @section Scripts {
