--- a/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
+++ b/Bakalauras/Bakalauras/Pages/Uzdaviniai/CreateTask.cshtml
@@ -44,7 +44,7 @@
         <input type="hidden" id="Ans2" name="Ans2" asp-for="_Task.Answer2" />
         <input type="hidden" id="Ans3" name="Ans3" asp-for="_Task.Answer3" />
         <input type="hidden" id="Ans4" name="Ans4" asp-for="_Task.Answer4" />
-        <input type="hidden" id="expl" name="expl" asp-for="_Task.Explaining" />
+        @*<input type="hidden" id="expl" name="expl" asp-for="_Task.Explaining" />*@
 
         @Html.HiddenFor(f => f.plainText)
         <div class="row">
@@ -54,24 +54,43 @@
                 </div>
                 <div class="card" style="margin-bottom: 20px;">
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Uždavinio rašyklė</label>
+                        <h3 style="margin-left: 20px; margin-right: 10px;"><label for="exampleFormControlTextarea1">Uždavinio rašyklė</label></h3>
                         <textarea class="form-control" id="TaskCreate" rows="3">\( \)</textarea>
-
-                        <button type="button" id="eqStart" style="margin-left: 20px; margin-right: 10px;">Iterpt</button>
-
+                        <br />
+                        <button type="button" id="eqStart" style="margin-left: 20px; margin-right: 10px;">Iterpti funkcija</button>
+                        <br />
+                        <hr />
                         <button type="button" id="frac" style="margin-left: 20px; margin-right: 10px;">
-                            <img src="/images/stackedFraction.png" style="width:2em; height:2em;" alt="Button Image">
+                            <img src="/images/stackedFraction.png" alt="Button Image">
                         </button>
 
                         <button type="button" id="sqrt" style="margin-left: 20px; margin-right: 10px;">
                             <img src="/images/squareRoot.png" alt="Button Image">
                         </button>
 
-                        <button type="button" id="saveEq" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip uždavinį</button>
-                        <button type="button" id="saveAnswer1" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 1</button>
-                        <button type="button" id="saveAnswer2" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 2</button>
-                        <button type="button" id="saveAnswer3" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 3</button>
-                        <button type="button" id="saveAnswer4" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip Atsakymą 4</button>
+                        <button type="button" id="integ" style="margin-left: 20px; margin-right: 10px;">
+                            <img src="/images/integralNoUpperNoLower.png" alt="Button Image">
+                        </button>
+
+                        <button type="button" id="power" style="margin-left: 20px; margin-right: 10px;">
+                            <img src="/images/superscript.png" alt="Button Image">
+                        </button>
+
+                        <button id="sinButton" style="margin-left: 20px; margin-right: 10px;">
+                            <span style="font-size: 45px;">sin</span>
+                        </button>
+
+                        <button id="cosButton" style="margin-left: 20px; margin-right: 10px;">
+                            <span style="font-size: 45px;">cos</span>
+                        </button>
+                        <br />
+                        <hr />
+                        <h4 style="margin-left: 20px;">Saugoti kaip: </h4>
+                        <button type="button" id="saveEq" style="margin-left: 20px; margin-right: 10px;">Uždavinį</button>
+                        <button type="button" id="saveAnswer1" style="margin-left: 20px; margin-right: 10px;">Atsakymą 1</button>
+                        <button type="button" id="saveAnswer2" style="margin-left: 20px; margin-right: 10px;">Atsakymą 2</button>
+                        <button type="button" id="saveAnswer3" style="margin-left: 20px; margin-right: 10px;">Atsakymą 3</button>
+                        <button type="button" id="saveAnswer4" style="margin-left: 20px; margin-right: 10px;">Atsakymą 4</button>
                         @*<button type="button" id="saveExplain" style="margin-left: 20px; margin-right: 10px;">Saugoti kaip paaiškinimą</button>*@
                     </div>
                 </div>
@@ -84,61 +103,73 @@
                 </div>
 
                 <div class="card" style="margin-bottom: 20px;">
-                    <label>Uždavinys saugojimui</label>
-                    <div id="displaySave" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;"></div>
-                </div>
-
-                <div class="card" style="margin-bottom: 20px;">
-                    <div class="form-group" style="border: solid">
-                        <label for="exampleAnswer1">Atsakymas - 1</label>
-                        <div id="displaySaveAnswer1" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer1"></div>
-                        <small id="emailHelp" class="form-text text-muted">Šis atsakymas turi būti užrašytas kaip teisingas</small>
+                    <div class="form-group" style="border: 2px solid #ccc; border-radius: 5px;">
+                        <label>Uždavinys saugojimui</label>
+                        <div id="displaySave" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;"></div>
+                        <br />
+                        <button type="button" id="editTask" class="btn btn-success btn-sm text-white">Redaguoti</button>
+                        </div>
                     </div>
-                    <div class="form-group" style="border: solid">
-                        <label for="exampleAnswer2">Atsakymas - 2</label>
-                        <div id="displaySaveAnswer2" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer2"></div>
-                    </div>
-                    <div class="form-group" style="border: solid">
-                        <label for="exampleAnswer3">Atsakymas - 3</label>
-                        <div id="displaySaveAnswer3" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer3"></div>
-                    </div>
-                    <div class="form-group" style="border: solid">
-                        <label for="exampleAnswer4">Atsakymas - 4</label>
-                        <div id="displaySaveAnswer4" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer4"></div>
-                    </div>
-                </div>
 
-                @*<div class="card" style="margin-bottom: 20px;">
-                    <div class="form-group">
-                        <label for="Explaining">Atsakius į klausimą neteisingai būtu rodomas šis paaiškinimas:</label>
-                        <div id="displayExplain" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displayExplain"></div>
+                    <div class="card" style="margin-bottom: 20px;">
+                        <div class="form-group" style="border: 2px solid #ccc; border-radius: 5px;">
+                            <label for="exampleAnswer1">Atsakymas - 1</label>
+                            <div id="displaySaveAnswer1" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer1"></div>
+                            <small id="emailHelp" class="form-text text-muted">Šis atsakymas turi būti užrašytas kaip teisingas</small>
+                            <br />
+                            <button type="button" id="editAnswer1" class="btn btn-success btn-sm text-white">Redaguoti</button>
+                        </div>
+                        <div class="form-group" style="border: 2px solid #ccc; border-radius: 5px;">
+                            <label for="exampleAnswer2">Atsakymas - 2</label>
+                            <div id="displaySaveAnswer2" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer2"></div>
+                            <br />
+                            <button type="button" id="editAnswer2" class="btn btn-success btn-sm text-white">Redaguoti</button>
+                        </div>
+                        <div class="form-group" style="border: 2px solid #ccc; border-radius: 5px;">
+                            <label for="exampleAnswer3">Atsakymas - 3</label>
+                            <div id="displaySaveAnswer3" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer3"></div>
+                            <br />
+                            <button type="button" id="editAnswer3" class="btn btn-success btn-sm text-white">Redaguoti</button>
+                        </div>
+                        <div class="form-group" style="border: 2px solid #ccc; border-radius: 5px;">
+                            <label for="exampleAnswer4">Atsakymas - 4</label>
+                            <div id="displaySaveAnswer4" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displaySaveAnswer4"></div>
+                            <br />
+                            <button type="button" id="editAnswer4" class="btn btn-success btn-sm text-white">Redaguoti</button>
+                        </div>
                     </div>
-                </div>*@
 
-                <div class="card" style="margin-bottom: 20px;">
-                    <h3>Papildoma informacija</h3>
-                    <label for="tema"><b>Uždavinio tema:</b></label>
-                    <select class="custom-select" style="width:400px;" name="tema" id="tema">
-                        <option value="Realieji skaičiai ir skaičiavimai">Realieji skaičiai ir skaičiavimai</option>
-                        <option value="Skaitiniai ir raidiniai reiškiniai">Skaitiniai ir raidiniai reiškiniai</option>
-                        <option value="Lygtys, nelygybės ir jų sistemos">Lygtys, nelygybės ir jų sistemos</option>
-                        <option value="Trigonometrija">Trigonometrija</option>
-                        <option value="Difrencialinis skaičiavimas">Difrencialinis skaičiavimas</option>
-                        <option value="Kombinatorika ir tikimybių teorija">Kombinatorika ir tikimybių teorija</option>
-                        <option value="Atsitiktinis dydis. Statistika">Atsitiktinis dydis. Statistika</option>
-                    </select><br><br>
-
-                    <label for="tema"><b>Uždavinio sudetingumas:</b></label>
-                    <select class="custom-select" style="width:400px;" name="sunk" id="sunk">
-                        <option value="A">A</option>
-                        <option value="B">B</option>
-                    </select><br><br>
-                </div>
-
-                <div class="card" style="margin-bottom: 20px;">
-                    <button asp-page-handler="Create" class="btn btn-success btn-sm text-white">Sukurti Uždavinį</button>
-                </div>
+                    @*<div class="card" style="margin-bottom: 20px;">
+            <div class="form-group">
+                <label for="Explaining">Atsakius į klausimą neteisingai būtu rodomas šis paaiškinimas:</label>
+                <div id="displayExplain" style="margin-bottom: 20px; margin-top: 20px; font-size: 32px;" name="displayExplain"></div>
             </div>
+        </div>*@
+
+                    <div class="card" style="margin-bottom: 20px;">
+                        <h3>Papildoma informacija</h3>
+                        <label for="tema"><b>Uždavinio tema:</b></label>
+                        <select class="custom-select" style="width:400px;" name="tema" id="tema">
+                            <option value="Realieji skaičiai ir skaičiavimai">Realieji skaičiai ir skaičiavimai</option>
+                            <option value="Skaitiniai ir raidiniai reiškiniai">Skaitiniai ir raidiniai reiškiniai</option>
+                            <option value="Lygtys, nelygybės ir jų sistemos">Lygtys, nelygybės ir jų sistemos</option>
+                            <option value="Trigonometrija">Trigonometrija</option>
+                            <option value="Difrencialinis skaičiavimas">Difrencialinis skaičiavimas</option>
+                            <option value="Kombinatorika ir tikimybių teorija">Kombinatorika ir tikimybių teorija</option>
+                            <option value="Atsitiktinis dydis. Statistika">Atsitiktinis dydis. Statistika</option>
+                        </select><br><br>
+
+                        <label for="tema"><b>Uždavinio sudetingumas:</b></label>
+                        <select class="custom-select" style="width:400px;" name="sunk" id="sunk">
+                            <option value="A">A</option>
+                            <option value="B">B</option>
+                        </select><br><br>
+                    </div>
+
+                    <div class="card" style="margin-bottom: 20px;">
+                        <button asp-page-handler="Create" class="btn btn-success btn-sm text-white">Sukurti Uždavinį</button>
+                    </div>
+                </div>
         </div>
     </div>
 
@@ -204,6 +235,18 @@
     $(document).ready(function () {
         var gg = $('#plainText').val();
         $('#TaskCreate').val(gg);
+
+        if ($('#Ans1').val() !== null) {
+            const text = $('#Ans1').val();
+            const katexRegex = /\\\((.*?)\\\)/;
+
+            const renderedText = text.replace(katexRegex, (match, equation) => {
+                return katex.renderToString(equation);
+            });
+
+            $('#displaySaveAnswer1').html(renderedText);
+        }
+        
         if (gg.length > 1) {
             DisplayTask();
         }
@@ -285,7 +328,7 @@
             $('#Ans4').val(text);
             $('#displaySaveAnswer4').html(renderedText);
         });
-
+        editAnswer1
         $('#saveExplain').click(function () {
             const text = $('#TaskCreate').val();
             const katexRegex = /\\\((.*?)\\\)/;
@@ -334,6 +377,89 @@
             textarea[0].selectionStart = textarea[0].selectionEnd = startPos + text.length;
 
             DisplayTask();
+        });
+
+        $('#integ').click(function () {
+            var textarea = $('#TaskCreate');
+            var text = '\\int{Z}\\,dx';
+            var startPos = textarea[0].selectionStart;
+            var endPos = textarea[0].selectionEnd;
+            var value = textarea.val();
+            textarea.val(value.substring(0, startPos) + text + value.substring(endPos));
+            // Set the cursor position to the end of the inserted text
+            textarea[0].selectionStart = textarea[0].selectionEnd = startPos + text.length;
+
+            DisplayTask();
+        });
+
+        $('#power').click(function () {
+            var textarea = $('#TaskCreate');
+            var text = '^{Z}';
+            var startPos = textarea[0].selectionStart;
+            var endPos = textarea[0].selectionEnd;
+            var value = textarea.val();
+            textarea.val(value.substring(0, startPos) + text + value.substring(endPos));
+            // Set the cursor position to the end of the inserted text
+            textarea[0].selectionStart = textarea[0].selectionEnd = startPos + text.length;
+
+            DisplayTask();
+        });
+
+        $('#sinButton').click(function () {
+            var textarea = $('#TaskCreate');
+            var text = '\\sin{Z}';
+            var startPos = textarea[0].selectionStart;
+            var endPos = textarea[0].selectionEnd;
+            var value = textarea.val();
+            textarea.val(value.substring(0, startPos) + text + value.substring(endPos));
+            // Set the cursor position to the end of the inserted text
+            textarea[0].selectionStart = textarea[0].selectionEnd = startPos + text.length;
+
+            DisplayTask();
+        });
+
+        $('#cosButton').click(function () {
+            var textarea = $('#TaskCreate');
+            var text = '\\cos{Z}';
+            var startPos = textarea[0].selectionStart;
+            var endPos = textarea[0].selectionEnd;
+            var value = textarea.val();
+            textarea.val(value.substring(0, startPos) + text + value.substring(endPos));
+            // Set the cursor position to the end of the inserted text
+            textarea[0].selectionStart = textarea[0].selectionEnd = startPos + text.length;
+
+            DisplayTask();
+        });
+
+        $('#editAnswer1').click(function () {
+            var textarea = $('#TaskCreate');
+            textarea.val($('#Ans1').val());
+            DisplayTask();
+            $('html, body').animate({ scrollTop: 0 }, 'fast');
+        });
+        $('#editAnswer2').click(function () {
+            var textarea = $('#TaskCreate');
+            textarea.val($('#Ans2').val());
+            DisplayTask();
+            $('html, body').animate({ scrollTop: 0 }, 'fast');
+        });
+        $('#editAnswer3').click(function () {
+            var textarea = $('#TaskCreate');
+            textarea.val($('#Ans3').val());
+            DisplayTask();
+            $('html, body').animate({ scrollTop: 0 }, 'fast');
+        });
+        $('#editAnswer4').click(function () {
+            var textarea = $('#TaskCreate');
+            textarea.val($('#Ans4').val());
+            DisplayTask();
+            $('html, body').animate({ scrollTop: 0 }, 'fast');
+        });
+        $('#editTask').click(function () {
+            var textarea = $('#TaskCreate');
+            textarea.val($('#taskString').val());
+            DisplayTask();
+            $('html, body').animate({ scrollTop: 0 }, 'fast');
         });
 
         $('#TaskCreate').on('keyup click', function () {
